# Delaunay-cavity

./: .clang-uml  .gitignore  CMakeLists.txt  README.md  configs.hpp  delaunay_cavity_generator_template.toml  delaunay_cavity_refiner_template.toml  interactive_build.py  main2.cpp  main3.cpp
data/: 10points.1.ele  10points.1.neigh  10points.1.node  5points.1.ele  5points.1.neigh  5points.1.node  8points.ele  8points.neigh  8points.node  datagenerator.sh  pikachu.1.off  pikachu_Cavity1.off  pikachu_Cavity42.off  pikachu_Cavity_ascending_area.off  pikachu_Cavity_ascending_max_edge.off  pikachu_Cavity_ascending_min_edge.off  pikachu_Cavity_descending_area.off  pikachu_Cavity_descending_max_edge.off  pikachu_Cavity_descending_min_edge.off  pikachu_Cavity_noop.off  points50.1.off
diagrams/: delaunay_cavity.puml  polylla.puml
experiments/: count_edges.py  count_edges_5_random_seeds.ps1  count_edges_for_all_combinations.ps1  count_edges_for_all_combinations.sh  count_edges_polylla_og.py  count_for_seeds.sh  ele_to_face.py  plot_csv.py  summary_cavity.csv  summary_polylla.csv  triangle_to_off.py
experiments/stat_gatherer_utils/: average_memory.py  average_memory_details.py  average_memory_details_polylla.py  average_memory_details_polylla_og.py  average_polygons.py  average_time.py  average_time_details.py  average_time_details_polylla.py  average_time_details_polylla_og.py  average_time_polylla.py  summarizer.py
include/: half_edge.hpp  mesh_refinement_strategy.hpp  polygonal_mesh.hpp  vertex.hpp
include/concepts/: cavity_merging_strategy.hpp  has_adjacency_constructor.hpp  has_merge_method.hpp  is_half_edge_vertex.hpp  mesh_data.hpp  mesh_refiner.hpp  polygon_merging_policy_concept.hpp  primitive_integral.hpp  refinement_criterion.hpp  selection_criterion.hpp  triangle_comparator.hpp
include/concepts/mesh_details/: mesh_accesors.hpp  mesh_constructible.hpp  mesh_edges.hpp  mesh_indices.hpp  mesh_memory.hpp  mesh_setters.hpp  mesh_topology.hpp  mesh_vertices.hpp
include/mesh_data/: half_edge_mesh.hpp
include/mesh_data/structures/: half_edge.hpp  he_vertex.hpp  vertex.hpp
include/mesh_generators/: mesh_generator.hpp  mesh_generator_data.hpp  mesh_generator_header.hpp
include/mesh_generators/delaunay_cavity/: delaunay_cavity_generator.hpp
include/mesh_generators/delaunay_cavity/cavity_merger_strategy/: cavity_merging_strategy.hpp  cavity_merging_strategy_base.hpp  exclude_previous_cavities_strategy.hpp  merge_triangles_strategy.hpp
include/mesh_generators/delaunay_cavity/helper_structs/: cavity.hpp  delaunay_cavity_data.hpp  union_find_cavity_merger.hpp
include/mesh_generators/delaunay_cavity/mesh_helpers/: mesh_helper_delaunay_cavity.hpp  mesh_helper_half_edge_delaunay_cavity.hpp
include/mesh_generators/delaunay_cavity/triangle_comparators/: area_comparator.hpp  random_comparator.hpp  triangle_comparators.hpp
include/mesh_generators/polylla/: polylla_generator.hpp
include/mesh_generators/polylla/helper_structs/: polylla_data.hpp
include/mesh_generators/polylla/mesh_helpers/: mesh_helper_half_edge_polylla.hpp  mesh_helper_polylla.hpp
include/mesh_generators/selection_criteria/: min_angle_criterion.hpp  min_angle_criterion_robust.hpp  min_area2_criterion.hpp  min_area_criterion.hpp  not_criterion.hpp  null_selection_criterion.hpp  selection_criteria.hpp
include/mesh_generators/selection_criteria/composers/: and_criteria.hpp  or_criteria.hpp
include/mesh_io/: ale_writer.hpp  mesh_reader.hpp  mesh_writer.hpp  node_ele_reader.hpp  off_reader.hpp  off_writer.hpp
include/mesh_refiners/: delaunay_cavity_refiner.hpp  mesh_refiner.hpp  mesh_refiner_data.hpp  mesh_refiner_header.hpp  polylla_refiner.hpp
include/mesh_refiners/delaunay_cavity/: delaunay_cavity_refiner.hpp
include/mesh_refiners/delaunay_cavity/cavity_merger_strategy/: cavity_merging_strategy.hpp  cavity_merging_strategy_base.hpp  exclude_previous_cavities_strategy.hpp  merge_triangles_strategy.hpp
include/mesh_refiners/delaunay_cavity/helper_structs/: cavity.hpp  delaunay_cavity_data.hpp  union_find_cavity_merger.hpp
include/mesh_refiners/delaunay_cavity/mesh_helpers/: mesh_helper_delaunay_cavity.hpp  mesh_helper_half_edge_delaunay_cavity.hpp
include/mesh_refiners/delaunay_cavity/triangle_comparators/: angle_comparator.hpp  area_comparator.hpp  edge_length_comparator.hpp  null_comparator.hpp  random_comparator.hpp  (+1 more)
include/mesh_refiners/helpers/: mesh_helper.hpp
include/mesh_refiners/polylla/: polylla_refiner.hpp
include/mesh_refiners/refinement_criteria/: min_angle_criterion.hpp  min_angle_criterion_robust.hpp  min_area2_criterion.hpp  min_area_criterion.hpp  not_criterion.hpp  null_refinement_criterion.hpp  refinement_criteria.hpp
include/misc/: memory_stat.hpp  mesh_stat.hpp  time_stat.hpp
include/template_implementations/mesh_data/: half_edge_mesh.ipp
include/template_implementations/mesh_io/: node_ele_reader.ipp  off_reader.ipp  off_writer.ipp
include/template_implementations/mesh_refiners/: delaunay_cavity_refiner.ipp
src/: CMakeLists.txt
src/mesh_refiners/refinement_criteria/: min_angle_criterion.cpp
step_drawing/: svg_step1.py  svg_step2.py  svg_step3.py  svg_step4.py  svg_step5.py  svg_step6.py  svg_step7.py  svg_steps_utils.py
template_implementations/mesh_data/: half_edge_mesh.ipp
template_implementations/mesh_generators/delaunay_cavity/: delaunay_cavity_generator.ipp
template_implementations/mesh_generators/polylla/: polylla_generator.ipp
template_implementations/mesh_generators/selection_criteria/: min_angle_criterion.ipp  min_angle_criterion_robust.ipp  min_area2_criterion.ipp  min_area_criterion.ipp
template_implementations/mesh_io/: ale_writer.ipp  node_ele_reader.ipp  off_reader.ipp  off_writer.ipp
template_implementations/mesh_refiners/delaunay_cavity/: delaunay_cavity_refiner.ipp
template_implementations/mesh_refiners/polylla/: polylla_refiner.ipp
template_implementations/mesh_refiners/refinement_criteria/: min_angle_criterion.ipp  min_angle_criterion_robust.ipp  min_area2_criterion.ipp  min_area_criterion.ipp
(+30 files in other folders)
